# gema

./: .gitignore  CMakeLists.txt  gema.c  match.c
doc/: .cvsignore
src/: .cvsignore
test/: gematest  test  test.bat
